# UDEMY_ESP32

./: README.md
project-name/: CMakeLists.txt
project-name/main/: CMakeLists.txt  DHT22.c  DHT22.h  app_nvs.c  app_nvs.h  http_server.c  http_server.h  main.c  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
project-name/main/certs/: certificate_pem_crt  private_pem_key
project-name/main/webpage/: app.css  app.js  index.html
